@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

package Logic as LogicPackage {

package "Parser Classes" as ParserClasses{
class AddressBookParser
class ArgumentTokenizer
class ArgumentMultimap
class Prefix
class ParserUtil
class XYZCommandParser
}
Class XYZCommand
Class CommandResult
Class "{abstract}\nCommand" as Command

Class "<<interface>>\nLogic" as Logic
Class LogicManager
}

package Model {
Class HiddenModel #FFFFFF
}

package Storage {
}

Class HiddenOutside #FFFFFF
HiddenOutside ..> Logic

LogicManager .right.|> Logic
LogicManager -right->"1" ParserClasses
ParserClasses ..> XYZCommand : <<create>>

' wiring (kept minimal)
LogicManager --> AddressBookParser
AddressBookParser ..> ArgumentTokenizer
ArgumentTokenizer --> ArgumentMultimap
ParserUtil ..> Prefix
AddressBookParser --> XYZCommandParser
XYZCommandParser ..> ParserUtil

XYZCommand -up-|> Command
LogicManager .left.> Command : <<call>>

LogicManager --> Model
LogicManager --> Storage
Storage --[hidden] Model
Command .[hidden]up.> Storage
Command .right.> Model
note right of XYZCommand
XYZCommand = AddCommand, EditCommand,
DeleteCommand, FindCommand, ListCommand,
NoteCommand, PriorityCommand, SortCommand,
Undo/Redo, ClearCommand, HelpCommand
end note

Logic ..> CommandResult
LogicManager .down.> CommandResult
Command .up.> CommandResult : <<create>>
@enduml
